--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
 </head>
 
 <body>
+    <header></header>
+    <main>
+        <section id="about">
+            <div class="text"></div>
+            <figure>
+                <figcaption></figcaption>
+            </figure>
+        </section>
+
+        <section id="projects">
+            <article class="project">
+                <div class="image"></div>
+                <details>
+                    <summary></summary>
+                </details>
+            </article>
+            <article class="project">
+                <div class="image"></div>
+                <details>
+                    <summary></summary>
+                </details>
+            </article>
+            <article class="project">
+                <div class="image"></div>
+                <details>
+                    <summary></summary>
+                </details>
+            </article>
+        </section>
+    </main>
+
     <script src="script.js"></script>
 </body>
 
