added navigation with sections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <a href="index.html"></a>
+            <a href="#about"></a>
+            <a href="#projects"></a>
+            <a href="contact.html"></a>
+        </nav>
+
+    </header>
     <main>
         <section id="about">
             <div class="text"></div>
