--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
             </article>
         </section>
     </main>
-
+    <footer>Renate Meimere</footer>
     <script src="script.js"></script>
 </body>
+
 
 </html>
